--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -189,6 +189,8 @@
 		&-main
 			&__bar
 				flex-direction: column
+				&-wrapper
+					width: auto
 				&-user
 					order: -1
 					width: 84%
@@ -220,6 +222,9 @@
 					align-items: center
 					margin-top: 50px
 					flex-direction: column
+
+					flex-wrap: nowrap
+					width: 100%
 				&-item
 					width: 90%
 					display: flex
